# cookiecutter-jupyterlab

./: LICENSE.md  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: labextensions.json  overrides.json  pyproject.toml
