[tool.poetry.dependencies]
python = '^3.6.1'
pandas = '^1.0.3'
matplotlib = '^3.1.2'
bokeh = '^1.4.0'
geopandas = '^0.6.0'
jupyterlab = '^1.2.6'
seaborn = '^0.10.0'
isort = '^4.3.21'

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
license = "MIT"
